fixes for minor layout issues

--- a/src/fleming-theme/templates/layout/footer.scss
+++ b/src/fleming-theme/templates/layout/footer.scss
@@ -1,5 +1,7 @@
 footer {
   font-size: 0;
+  width: 100%;
+  overflow: hidden;
 
   p, li {
     font-size: 16px;
