--- a/src/fleming-theme/templates/page-elements/nav.scss
+++ b/src/fleming-theme/templates/page-elements/nav.scss
@@ -13,6 +13,7 @@ nav.global-nav {
       font-size: 21px;
       line-height: 1.4em;
       position: relative;
+      vertical-align: middle;
 
       a {
         position: relative;
